<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>InodeTableOneInode</class>
 <widget class="QDialog" name="InodeTableOneInode">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1027</width>
    <height>927</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="6" column="0">
    <widget class="QPushButton" name="MoveInode">
     <property name="text">
      <string>Move</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QPushButton" name="SubmitDataDelete">
     <property name="text">
      <string>Delete Data Block</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>i_mode</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="i_uid"/>
     </item>
     <item row="7" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
        <string>i_gid</string>
       </property>
      </widget>
     </item>
     <item row="13" column="0">
      <widget class="QLabel" name="label_17">
       <property name="text">
        <string>i_faddr</string>
       </property>
      </widget>
     </item>
     <item row="9" column="1">
      <widget class="QLineEdit" name="i_blocks"/>
     </item>
     <item row="14" column="1">
      <widget class="QLineEdit" name="Inode_Num"/>
     </item>
     <item row="9" column="0">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>i_blocks</string>
       </property>
      </widget>
     </item>
     <item row="8" column="0">
      <widget class="QLabel" name="label_10">
       <property name="text">
        <string>i_links_count</string>
       </property>
      </widget>
     </item>
     <item row="6" column="0">
      <widget class="QLabel" name="label_9">
       <property name="text">
        <string>i_dtime</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
      <widget class="QLineEdit" name="i_atime"/>
     </item>
     <item row="11" column="1">
      <widget class="QLineEdit" name="i_generation"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>i_uid</string>
       </property>
      </widget>
     </item>
     <item row="14" column="0">
      <widget class="QLabel" name="label_18">
       <property name="text">
        <string>Inode_Num</string>
       </property>
      </widget>
     </item>
     <item row="16" column="1">
      <widget class="QLineEdit" name="data_block_num"/>
     </item>
     <item row="16" column="0">
      <widget class="QLabel" name="label_19">
       <property name="text">
        <string>DataBlockNum</string>
       </property>
      </widget>
     </item>
     <item row="11" column="0">
      <widget class="QLabel" name="label_14">
       <property name="text">
        <string>i_generation</string>
       </property>
      </widget>
     </item>
     <item row="5" column="1">
      <widget class="QLineEdit" name="i_mtime"/>
     </item>
     <item row="4" column="1">
      <widget class="QLineEdit" name="i_ctime"/>
     </item>
     <item row="6" column="1">
      <widget class="QLineEdit" name="i_dtime"/>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="i_mode"/>
     </item>
     <item row="5" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
        <string>i_mtime</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>i_atime</string>
       </property>
      </widget>
     </item>
     <item row="10" column="0">
      <widget class="QLabel" name="label_11">
       <property name="text">
        <string>i_flags</string>
       </property>
      </widget>
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_8">
       <property name="text">
        <string>i_ctime</string>
       </property>
      </widget>
     </item>
     <item row="13" column="1">
      <widget class="QLineEdit" name="i_faddr"/>
     </item>
     <item row="10" column="1">
      <widget class="QLineEdit" name="i_flags"/>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="i_size"/>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>i_size</string>
       </property>
      </widget>
     </item>
     <item row="12" column="1">
      <widget class="QLineEdit" name="i_file_acl"/>
     </item>
     <item row="12" column="0">
      <widget class="QLabel" name="label_15">
       <property name="text">
        <string>i_file_acl</string>
       </property>
      </widget>
     </item>
     <item row="8" column="1">
      <widget class="QLineEdit" name="i_links_count"/>
     </item>
     <item row="7" column="1">
      <widget class="QLineEdit" name="i_gid"/>
     </item>
     <item row="15" column="0" colspan="2">
      <widget class="QPushButton" name="SubmitChange">
       <property name="text">
        <string>Change</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="10" column="0">
    <widget class="QTextBrowser" name="inode_content"/>
   </item>
   <item row="2" column="0">
    <widget class="QPushButton" name="SubmitDataBlock">
     <property name="text">
      <string>Add Data Block</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QPushButton" name="CopyInode">
     <property name="text">
      <string>Copy</string>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLineEdit" name="copy_move"/>
   </item>
   <item row="7" column="0">
    <widget class="QLineEdit" name="lineEdit_2"/>
   </item>
   <item row="8" column="0">
    <widget class="QPushButton" name="pushButton">
     <property name="text">
      <string>Parse inode</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
